<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_desert"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6424242"
        android:visibility="visible" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/no_entry_hint"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/txt_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bookmark_24dp" />


    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_6x"
        android:layout_marginStart="@dimen/space_6x"
        android:text="@string/welcome_to"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_6x"
        android:layout_marginStart="@dimen/space_6x"
        android:text="@string/journal"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_6x"
        android:drawableLeft="@drawable/ic_google"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_splash_title" />


</android.support.constraint.ConstraintLayout>