<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewJournalEntryActivity"
    tools:showIn="@layout/activity_new_journal_entry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_1x"
            app:cardBackgroundColor="@android:color/white">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_2x">

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="June 12, 2018" />

                <ImageView
                    android:id="@+id/img_title"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/space_1x"
                    android:background="@drawable/bg_green_circle"
                    android:contentDescription="@string/journal_title"
                    android:padding="@dimen/space_1x"
                    app:layout_constraintTop_toBottomOf="@id/txt_date"
                    app:srcCompat="@drawable/ic_label_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_2x"
                    android:layout_marginStart="@dimen/space_2x"
                    app:layout_constraintLeft_toRightOf="@id/img_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/img_title">

                    <EditText
                        android:id="@+id/txt_journal_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:hint="@string/journal_title"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:paddingTop="@dimen/space_1x"
                        tools:text="Hello  dfvv;lvlx;vlx;vlx;v x,lx,vxlv;x xv;;x;vlxlv xvl;xvl;xlvx" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txt_title_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_1x"
                    android:text="@string/title_counter"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_title" />
            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_2x"
            app:cardBackgroundColor="@android:color/white">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:padding="@dimen/space_2x">

                <ImageView
                    android:id="@+id/img_journal_text"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_yellow_circle"
                    android:contentDescription="@string/journal_text"
                    android:padding="@dimen/space_1x"
                    app:srcCompat="@drawable/ic_description_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_2x"
                    android:layout_marginStart="@dimen/space_2x"
                    app:layout_constraintLeft_toRightOf="@id/img_journal_text"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/img_journal_text">

                    <EditText
                        android:id="@+id/txt_journal_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:gravity="top"
                        android:hint="@string/entry_hint"
                        android:inputType="textCapSentences|textMultiLine"
                        android:minHeight="150dp"
                        android:paddingTop="@dimen/space_1x"
                        tools:text="Hello  dfvv;lvlx;vlx;vlx;v x,lx,vxlv;x xv;;x;vlxlv xvl;xvl;xlvx" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txt_text_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_counter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>